mvp v1 stable fixed cv name to center on mobile

--- a/src/components/sections/resume/contact/resume.contact.styles.css
+++ b/src/components/sections/resume/contact/resume.contact.styles.css
@@ -60,6 +60,7 @@
 
     .Resume-contact > .card-body > .text {
         width: 100%;
+        align-items: center;
     }
 
     .Resume-contact > .card-body > .contact {
